@@ -1,4 +1,5 @@
 0.2.0
+  BugFix: Block some events while executing a transaction.
   BugFix in parser code.
   BugFix in tab Files retrieve.
   Now tab Files shows progress bar.
